--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -5,10 +5,10 @@ isoCode = "en"
 weight = 1
 rtl = false
 
-title = "Congo"
+title = "KSCU Staging"
 # logo = "img/logo.jpg"
-# description = "My awesome website"
-# copyright = "Copy, _right?_ :thinking_face:"
+description = "A staging site for KSCU."
+copyright = "CC 2022"
 
 dateFormat = "2 January 2006"
 
