--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -7,7 +7,7 @@
 
 colorScheme = "congo"
 defaultAppearance = "light" # valid options: light or dark
-autoSwitchAppearance = true
+autoSwitchAppearance = false
 
 enableSearch = false
 enableCodeCopy = false
