--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "hugo --gc --minify -b $URL"
+command = "hugo --gc --minify"
 publish = "public"
 functions = "netlify/functions/"
 
