Added showPhone variable and phone on footer.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -23,6 +23,7 @@ enableCodeCopy = false
   showThemeAttribution = true
   showAppearanceSwitcher = false
   showScrollToTop = false
+  showPhone = true
 
 [homepage]
   layout = "page" # valid options: page, profile, custom
