Update hugo build command to use $URL

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   },
   "scripts": {
     "dev": "tinacms dev -c \"hugo server -D\"",
-    "build": "tinacms build && hugo"
+    "build": "tinacms build && hugo --gc --minify -b $URL"
   }
 }
