--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "@tinacms/cli": "^1.5.10",
     "tinacms": "^1.5.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
