--- a/themes/kscu-theme/package.json
+++ b/themes/kscu-theme/package.json
@@ -38,7 +38,6 @@
     "prettier-plugin-go-template": "^0.0.13",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.3.2",
     "vendor-copy": "^3.0.1"
   },
   "vendorCopy": [],
@@ -71,5 +70,8 @@
       "from": "node_modules/fuse.js/dist/fuse.min.js",
       "to": "assets/lib/fuse/fuse.min.js"
     }
-  ]
+  ],
+  "dependencies": {
+    "tailwindcss": "^3.3.2"
+  }
 }
