Changed showReadingTime default to False.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -39,7 +39,7 @@ enableCodeCopy = false
   showHeadingAnchors = true
   showPagination = true
   invertPagination = false
-  showReadingTime = true
+  showReadingTime = false
   showTableOfContents = false
   showTaxonomies = false
   showWordCount = false
